test/sh/error/if_var_out_of_scope.sk
if true {
	mut x := 0
}

return x